sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var echanger =true
  var len = getNombreValeurs()
  while (echanger == true) {
    for (i <- 0 to len -2) {
      var rien =0
    	if (plusPetit(i+1, i)) {
      	echange(i, i+1)
      };else { 
        rien +=1
      }
      }
  	};if (rien == len-2) {
      echanger == false
    }	
}
}
